<resources>
    <string name="app_name">VR</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="img_main">image main</string>
    <string name="txt_main"><![CDATA[Vie & Résidence]]></string>
    <string name="btn_signin">"Sign in"</string>
    <string name="btn_signup">Sign up</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="img_logo">logo</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_email">"Enter your Email"</string>
    <string name="txt_forgotpassword">Forgot password</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="signup_title">Create Account</string>
    <string name="hint_address">address</string>
    <string name="hint_name">name</string>
    <string name="hint_surname">surname</string>
    <string name="prompt_type">Vous êtes</string>
    <string-array name="arrays_type">
        <item>propriétaire</item>
        <item>locataire</item>
        <item>autre</item>
    </string-array>
    <string name="prompt_roles">Fonctionnalité dans la copropriété</string>
    <string-array name="arrays_roles">
        <item>gardien</item>
        <item>président de la résidence</item>
        <item>jardinier</item>
        <item>autre</item>
    </string-array>
    <string name="title_activity_basic_tool_bar">BasicToolBar</string>

    <!-- menu toolBar -->
    <string name="action_depot">Depôts</string>
    <string name="action_document">Docments</string>
    <string name="action_message">Message</string>
    <string name="action_actualite">Actualité</string>
    <string name="title_activity_news_feed">NewsFeed</string>
    <string name="title_activity_box_message">BoxMessage</string>
    <string name="title_activity_deposit">Deposit</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_send_object">SendObject</string>
    <string name="title_activity_apropos">Apropos</string>

</resources>
