<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="fr.dant.vr.BasicToolBar">

    <item
        android:id="@+id/action_actualite"
        android:icon="@drawable/ic_action_paste"
        android:orderInCategory="100"
        android:title="@string/action_actualite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_message"
        android:icon="@drawable/ic_action_mail"
        android:orderInCategory="100"
        android:title="@string/action_message"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_depot"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="100"
        android:title="@string/action_depot"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_document"
        android:icon="@drawable/ic_action_copy"
        android:orderInCategory="100"
        android:title="@string/action_document"
        app:showAsAction="always" />
</menu>
