<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="fr.dant.vr.SignUp">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/signup_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/field_signup_name"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="35dp"
        android:hint="@string/hint_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/field_signup_surname"
        android:layout_alignTop="@+id/field_signup_name"
        android:layout_toEndOf="@+id/field_signup_name"
        android:hint="@string/hint_surname" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/field_signup_email"
        android:layout_below="@+id/field_signup_name"
        android:layout_alignStart="@+id/field_signup_name"
        android:layout_marginStart="40dp"
        android:layout_marginTop="41dp"
        android:layout_margin="0dp"
        android:hint="@string/hint_email" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/field_signup_password"
        android:layout_below="@+id/field_signup_email"
        android:layout_alignStart="@+id/field_signup_email"
        android:layout_marginStart="56dp"
        android:layout_marginTop="26dp"
        android:layout_margin="0dp"
        android:hint="@string/hint_password" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/field_signup_address"
        android:layout_below="@+id/field_signup_password"
        android:layout_alignStart="@+id/field_signup_password"
        android:layout_marginStart="29dp"
        android:layout_marginTop="22dp"
        android:layout_margin="0dp"
        android:hint="@string/hint_address" />

</RelativeLayout>
