<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".MainActivity"
    android:id="@+id/layout_main"
    android:padding="0dp"
    android:background="#ff604f59">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/img_main"
        android:src="@drawable/main"
        android:layout_marginLeft="0dp"
        android:contentDescription="@string/img_main"
        android:layout_marginRight="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_main"
        android:id="@+id/txt_main"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signin"
        android:id="@+id/btn_main_signin"
        android:layout_marginBottom="126dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="58dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:id="@+id/btn_main_signup"
        android:layout_marginEnd="59dp"
        android:layout_alignTop="@+id/btn_main_signin"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
