<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <!--  Header  Starts-->
        <FrameLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textAlignment="center">
            <!-- Logo Start-->
            <ImageView android:src="@drawable/logo"
                android:layout_width="200dp"
                android:layout_height="fill_parent"
                android:id="@+id/img_logo"
                android:textAlignment="center"
                android:contentDescription="@string/img_logo"
                android:layout_gravity="center" />
            <!-- Logo Ends -->
        </FrameLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <RelativeLayout android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/linearLayout">

            <TextView android:id="@+id/link_forgotpassword"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_forgotpassword"
                android:textSize="18dip"
                android:textColor="#0b84aa"
                android:clickable="true"
                android:layout_gravity="left"
                android:gravity="left"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_forgotpassword"
                android:gravity="left"
                android:textSize="18dip"
                android:textColor="#0b84aa"
                android:clickable="true"
                android:layout_gravity="left"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />
        </RelativeLayout>
        <!-- Footer Ends -->

        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header"
            android:weightSum="1"
            android:id="@+id/linearLayout">
            <!--  Email Label -->
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:id="@+id/field_signin_email"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
            <!--  Password Label -->
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:password="true"
                android:id="@+id/field_signin_password"
                android:hint="@string/hint_password" />
            <!-- Login button -->
            <Button android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/btn_signin"
                android:textColor="#ffffff"
                android:background="#ff0cbcd3" />
            <!-- Link to Registration Screen -->

        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>
</ScrollView>
